src/objects/FAM__Fixed_Asset_Batch_Job__c.object
<CustomObject>
    <customHelpPage>FAM__FixedAssetBatchJobsHelp</customHelpPage>
    <description>Stores information relating to one batch run in Fixed Asset Management.</description>
    <fields>
        <fullName>FAM__Apex_Job_Id__c</fullName>
        <inlineHelpText>Unique Id for the batch job.</inlineHelpText>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAM__Batch_Process_Status__c</fullName>
        <formula>TEXT(FAM__Batch_Process__r.FAM__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The status of the associated batch process.</inlineHelpText>
        <label>Batch Process Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAM__Batch_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the associated batch process.</inlineHelpText>
        <label>Batch Process</label>
        <referenceTo>FAM__fflib_BatchProcess__c</referenceTo>
        <relationshipName>Fixed_Asset_Batch_Job</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAM__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that the batch control record has been deleted.</inlineHelpText>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAM__Job_Type__c</fullName>
        <description>The type of the batch job</description>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mass Export Schedule</fullName>
                </value>
                <value>
                    <fullName>Mass Depreciation Schedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAM__NotificationType__c</fullName>
        <description>The type of the batch email notification</description>
        <formula>IF(FAM__Total_Number_of_Errors__c=0,
        $Label.fam__fflib_notificationsuccessfull,
        IF(FAM__Total_Number_of_Errors__c = FAM__Total_Number_of_Logs__c,
        $Label.fam__fflib_notificationfailure, $Label.fam__fflib_notificationmixed
        )
        )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAM__Process_Completed__c</fullName>
        <label>Process Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FAM__Process_Name__c</fullName>
        <formula>FAM__Batch_Process__r.FAM__ProcessName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The name of batch process.</inlineHelpText>
        <label>Process Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAM__Process_Started__c</fullName>
        <label>Process Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FAM__Status__c</fullName>
        <inlineHelpText>The status of the batch job.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAM__Total_Number_of_Aborts__c</fullName>
        <inlineHelpText>Rollup that counts the number of logs where Log Type is Abort.</inlineHelpText>
        <label>Total Number of Aborts</label>
        <summaryFilterItems>
            <field>FAM__Batch_Log__c.FAM__Log_Type__c</field>
            <operation>equals</operation>
            <value>Abort</value>
        </summaryFilterItems>
        <summaryForeignKey>FAM__Batch_Log__c.FAM__Batch_Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FAM__Total_Number_of_Errors__c</fullName>
        <inlineHelpText>Rollup that counts the number of logs where Log Type is Error.</inlineHelpText>
        <label>Total Number of Errors</label>
        <summaryFilterItems>
            <field>FAM__Batch_Log__c.FAM__Log_Type__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </summaryFilterItems>
        <summaryForeignKey>FAM__Batch_Log__c.FAM__Batch_Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FAM__Total_Number_of_External__c</fullName>
        <inlineHelpText>Rollup that counts the number of logs where Log Type is External.</inlineHelpText>
        <label>Total Number of External</label>
        <summaryFilterItems>
            <field>FAM__Batch_Log__c.FAM__Log_Type__c</field>
            <operation>equals</operation>
            <value>External</value>
        </summaryFilterItems>
        <summaryForeignKey>FAM__Batch_Log__c.FAM__Batch_Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FAM__Total_Number_of_Logs__c</fullName>
        <inlineHelpText>Rollup that counts the number of logs.</inlineHelpText>
        <label>Total Number of Logs</label>
        <summaryForeignKey>FAM__Batch_Log__c.FAM__Batch_Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Fixed Asset Batch Job</label>
    <listViews>
        <fullName>FAM__All</fullName>
        <columns>NAME</columns>
        <columns>FAM__Job_Type__c</columns>
        <columns>FAM__Status__c</columns>
        <columns>FAM__Process_Started__c</columns>
        <columns>FAM__Process_Completed__c</columns>
        <columns>FAM__Total_Number_of_Logs__c</columns>
        <columns>FAM__Total_Number_of_Errors__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FAM__Deleted__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FAM__Export_Batches</fullName>
        <columns>NAME</columns>
        <columns>FAM__Status__c</columns>
        <columns>FAM__Process_Started__c</columns>
        <columns>FAM__Process_Completed__c</columns>
        <columns>FAM__Total_Number_of_Logs__c</columns>
        <columns>FAM__Total_Number_of_Errors__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FAM__Job_Type__c</field>
            <operation>equals</operation>
            <value>Mass Export Schedule</value>
        </filters>
        <filters>
            <field>FAM__Deleted__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Export Batches</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FAM__Mass_Generate_Batches</fullName>
        <columns>NAME</columns>
        <columns>FAM__Status__c</columns>
        <columns>FAM__Process_Started__c</columns>
        <columns>FAM__Process_Completed__c</columns>
        <columns>FAM__Total_Number_of_Logs__c</columns>
        <columns>FAM__Total_Number_of_Errors__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FAM__Job_Type__c</field>
            <operation>equals</operation>
            <value>Mass Depreciation Schedule</value>
        </filters>
        <filters>
            <field>FAM__Deleted__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Mass Generate Batches</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FABJN-{000000000}</displayFormat>
        <label>Fixed Asset Batch Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fixed Asset Batch Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>